# autoRoboProject

./: README.md
logs/: .gitkeep
scripts/: connect_and_start.sh  into_container.sh  run_client.sh  run_motors.sh  run_pipeline.sh  run_server.sh  start_all.sh  stop_all.sh
src/object_tracker_client/: CMakeLists.txt  package.xml
src/object_tracker_client/src/: object_tracker_client.cpp
src/object_tracker_interfaces/: CMakeLists.txt  package.xml
src/object_tracker_interfaces/action/: TrackObject.action
src/object_tracker_server/: CMakeLists.txt  package.xml
src/object_tracker_server/launch/: pipeline.launch.py  tracker.launch.py
src/object_tracker_server/src/: object_tracker_server.cpp
src/waveshare_motor_driver/: CMakeLists.txt  package.xml
src/waveshare_motor_driver/src/: waveshare_motor_driver.cpp
